Finish the linklist test and make some optimize

--- a/myalg/Makefile
+++ b/myalg/Makefile
@@ -2,7 +2,7 @@
 #environment
 CC = g++
 FLAGS_DEBUG = -g
-FLAGS_COMPILE = -c -Wall -Wextra -Werror -std=c++
+FLAGS_COMPILE = -c -Wall -Wextra -Werror
 
 #directory
 SHELL = /bin/sh
